# llada-cot-bench

llada_biggsm_cot/: README.md  pyproject.toml
llada_biggsm_cot/configs/: default.yaml
llada_biggsm_cot/scripts/: colab_quickstart.py
llada_biggsm_cot/src/llada_cot/: __init__.py  analysis.py  benchmark.py  cli.py  config.py  evaluation.py  prompts.py  trace.py
llada_biggsm_cot/tests/: test_evaluation.py
llada_cot/: README.md  pyproject.toml
llada_cot/configs/: default.yaml
llada_cot/scripts/: colab_quickstart.py
llada_cot/src/llada_cot/: __init__.py  analysis.py  benchmark.py  cli.py  config.py  evaluation.py  prompts.py
llada_cot/src/llada_cot/datasets/: __init__.py  biggsm.py  countdown.py  math_dataset.py
llada_cot/src/llada_cot/models/: __init__.py  ling.py  llada.py  qwen3.py
llada_cot_bench/scripts/: colab_quickstart.py
llada_cot_bench/src/llada_cot/: benchmark.py
llada_cot_bench/tests/: __init__.py
llada_cot_v2/: pyproject.toml
llada_cot_v2/configs/: default.yaml
llada_cot_v2/scripts/: colab_cells.py  colab_full.py  setup_vllm_ling.sh
llada_cot_v2/src/llada_cot/: __init__.py  analysis.py  benchmark.py  cli.py  config.py  evaluation.py  prompts.py  trace.py
llada_cot_v2/src/llada_cot/datasets/: __init__.py  biggsm.py  countdown.py  math_dataset.py
llada_cot_v2/src/llada_cot/models/: __init__.py  ling.py  llada.py  qwen3.py
