[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llada-cot-bench"
version = "0.3.0"
description = "Benchmark CoT prompting strategies on diffusion vs autoregressive LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dueun Kim"}
]
keywords = ["llm", "diffusion", "cot", "benchmark", "llada", "qwen3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.35,<4.45",  # LLaDA requires <4.45 (ROPE API change)
    "datasets>=2.14",
    "pandas>=2.0",
    "numpy>=1.24",
    "tqdm>=4.65",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]
wandb = [
    "wandb>=0.15",
]
math = [
    "math-verify>=0.2",
    "sympy>=1.12",
]
all = [
    "wandb>=0.15",
    "math-verify>=0.2",
    "sympy>=1.12",
]

[project.scripts]
llada-bench = "llada_cot.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/llada-cot-bench"
Repository = "https://github.com/YOUR_USERNAME/llada-cot-bench"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
